[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=1]
[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=2]
[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=3]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=4]
[ext_resource path="res://art/enemyFlyingAlt_2.png" type="Texture" id=5]
[ext_resource path="res://art/enemyFlyingAlt_1.png" type="Texture" id=6]
[ext_resource path="res://Mob.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "swim",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.113
height = 16.8084

[node name="Mob" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2D" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walk"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.383739, -0.163506 )
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="AngularTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="AngularTweenBack" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="AngularTween" to="." method="_on_angular_tween_completed"]
[connection signal="tween_completed" from="AngularTweenBack" to="." method="_on_angular_tween_back_completed"]
